--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -1,19 +1,4 @@
 {
-    "cephalixInstituteId":"Institute",
-    "lastUpdate":"Letztes<br>Update",
-    "runningKernel":"Kernelversion",
-    "availableUpdates":"Updatestand",
-    "installedKernel":"Installierter Kernel",
-    "rootUsage":"/ Belegung",
-    "srvUsage":"/srv Belegung",
-    "homeUsage":"/home Belegung",
-    "varUsage":"/var Belegung",
-    "Device was modified succesfully.":"Gerät wurde erfolgreich geändert.",
-    "Logged in users was cleaned up on '%s'.":"Angemeldete Benutzer am '%s' wurden gelöscht.",
-    "Device control was applied on '%s'.":"Gerätekontroll wurde am '%s' angewendet.",
-    "HWConf was set on '%s'.":"Gerätekonfiguration wurde am '%s' geändert.",
-    "Salt High State was applied on all running minions.":"Die Salt-Konfiguration wird an allen aktiven Clients angewendet.",
-    "Download of the softwares was started succesfully":"Das Heruntreladen von Softwarepakten wurde gestartet.",
     "%s was created succesfully.": "%s wurde erfolgreich erstellt.",
     "%s was deleted succesfully.": "%s wurde erfolgreich gelöscht.",
     "Acces was deleted succesfully": "Zugriffsregel wurde erfolgreich gelöscht",
@@ -97,11 +82,14 @@
     "Delete the import.": "Import löschen",
     "Denied Categories": "Verbotene Kategorien",
     "Device": "Gerät",
+    "Device control was applied on '%s'.": "Gerätekontroll wurde am '%s' angewendet.",
     "Device control was applied on ''%s.": "Geräteaktion wurde an '%s' angewendet.",
+    "Device was modified succesfully.": "Gerät wurde erfolgreich geändert.",
     "Devices": "Geräte",
     "Devices were created succesfully.": "Geräte wurden erfolgreich angelegt.",
     "Direct internet access": "Direkter Internetzugang",
     "Do you realy want to logout?": "Wollen Sie sich wirklich abmelden?",
+    "Download of the softwares was started succesfully": "Das Heruntreladen von Softwarepakten wurde gestartet.",
     "Download software packages.": "Softwarepakete herunterladen.",
     "Download the installation image": "Installationsmedium herunterladen",
     "Download the password files as pdf files.": "Passwortdatein als PDFs herunterladen.",
@@ -138,6 +126,7 @@
     "Group": "Gruppe",
     "Groups": "Gruppen",
     "HWConf": "Gerätekonfiguration",
+    "HWConf was set on '%s'.": "Gerätekonfiguration wurde am '%s' geändert.",
     "HWConfs": "Gerätekonfigurationen",
     "Import ist just running.": "Import läuft gerade",
     "Import users": "Benutzerimporte",
@@ -152,6 +141,7 @@
     "List of Imports": "Liste der Importe",
     "List of old Imports": "Alte Imports",
     "List of the results:": "Liste der Rückmeldungen",
+    "Logged in users was cleaned up on '%s'.": "Angemeldete Benutzer am '%s' wurden gelöscht.",
     "Manage DHCP Parameter of:": "DHCP Parameter verwalten:",
     "Manage access in the rooms": "Zugriffsstatus in den Räumen verwalten",
     "Manage customer": "Kunden verwalten",
@@ -225,12 +215,16 @@
     "Room access rules": "Raumzugriffsregeln",
     "Rooms": "Räume",
     "Rule type": "Art der Regel",
+    "Salt High State was applied on all running minions.": "Die Salt-Konfiguration wird an allen aktiven Clients angewendet.",
     "Security": "Sicherheit",
     "Select DHCP Option/Statement": "DHCP Option oder Statement wählen",
     "Select a Device": "Wählen Sie ein Gerät",
     "Select a Room": "Wählen Sie einen Raum",
     "Select a file": "Datei auswählen",
+    "Select a key": "Schlüssel wählen",
     "Select a room": "Raum wählen",
+    "Select an action": "Aktion wählen",
+    "Select an addon": "Zusatzmodul wählen",
     "Select objects": "Objekte auswählen",
     "Select picture size": "Bildgröße wählen",
     "Select the columns to show": "Sichbare Felder auswählen.",
@@ -260,6 +254,7 @@
     "Support request '%s' was not created. The reason is:'%s'": "Die Supportanfrage '%s' konnte nicht erstellt werden. Der Grund: '%s'",
     "Surfing is for '%s' disabled.": "Das Surfen ist für '%s' verboten.",
     "Surfing is for '%s' enabled.": "Das Surfen ist für '%s' erlaubt.",
+    "System addons": "Zusatzmodule",
     "System configuration": "Systemeinstellungen",
     "System status": "Systemstatus",
     "The '%s' was disabled.": "Der Benutzer '%s' wurde deaktiviert.",
@@ -310,11 +305,13 @@
     "apply": "anwenden",
     "applyForAll": "Für alle",
     "available members": "Nicht Mitglieder der Gruppe",
+    "availableUpdates": "Updatestand",
     "ayTemplate": "Installationsvorlage",
     "birthDay": "Geburtstag",
     "cancel": "verwerfen",
     "category": "Kategorie",
     "cephalixCustomerId": "Kunde",
+    "cephalixInstituteId": "Institute",
     "cephalixPW": "Cephalixpasswort",
     "checkboxSelection": "Mehreren Zeilen mit Checkbox selektieren",
     "class": "Klasse",
@@ -370,6 +367,7 @@
     "gymnasium": "Gymnaisum",
     "headerCheckboxSelection": "Checkbox in der Kopfzeile erlauben",
     "holiday": "feiertags",
+    "homeUsage": "/home Belegung",
     "hwconf": "Gerätekonfiguration",
     "hwconfId": "Gerätekonfiguration",
     "hwconfs": "Gerätekonfigurationen",
@@ -377,6 +375,7 @@
     "identifier": "Identifizierungsmerkmal",
     "import": "importieren",
     "importFile": "Importdatei wählen",
+    "installedKernel": "Installierter Kernel",
     "institute": "Institut",
     "institute was modified": "Institute wurde  geändert",
     "instituteStatus": "Vertragsstatus",
@@ -396,6 +395,7 @@
     "ipVPN": "Verbindungs-IP (VPN)",
     "lang": "Sprache",
     "lastSync": "letzte Synchronisierung",
+    "lastUpdate": "Letztes<br>Update",
     "lastname": "Nachname",
     "licenseType": "Lizenztip",
     "locality": "Ort/Adresse",
@@ -453,10 +453,12 @@
     "roomId": "Raum",
     "roomType": "Art des Raumes",
     "rooms": "Räume",
+    "rootUsage": "/ Belegung",
     "row": "Reihe",
     "rowHeight": "Zeilenhöhe",
     "rowMultiSelectWithClick": "Mehreren Zeilen per Klick selektieren",
     "rows": "Reihen",
+    "runningKernel": "Kernelversion",
     "saturday": "Samstag",
     "search": "suchen",
     "secondarySchool": "Mittel/Hauptschule",
@@ -483,6 +485,7 @@
     "sortInDirs": "In Benutzerverzeichnissen sortieren",
     "sourceAvailable": "Quellen verfügbar",
     "special": "Sonderschule",
+    "srvUsage": "/srv Belegung",
     "startclone": "Klonen starten",
     "state": "Bundesland",
     "status": "Status",
@@ -512,6 +515,7 @@
     "uuid": "Kennung (UUID)",
     "validity": "Gültigkeit",
     "value": "Lizenzschlüssel",
+    "varUsage": "/var Belegung",
     "version": "Version",
     "warningMessageDuration": "Dauer der Warnmeldungen in Sekunden",
     "wednesday": "Mittwoch",
