Implementing searchable select (ionic-selectable) by creating a room.

--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -88,6 +88,7 @@
     "Devices": "Geräte",
     "Devices were created succesfully.": "Geräte wurden erfolgreich angelegt.",
     "Direct internet access": "Direkter Internetzugang",
+    "Do you realy want to delete?": "Wollen Sie die folgenden Objekte wirklich löschen?",
     "Do you realy want to logout?": "Wollen Sie sich wirklich abmelden?",
     "Download of the softwares was started succesfully": "Das Heruntreladen von Softwarepakten wurde gestartet.",
     "Download software packages.": "Softwarepakete herunterladen.",
@@ -213,6 +214,7 @@
     "Room": "Raum",
     "Room access": "Raumzugriff",
     "Room access rules": "Raumzugriffsregeln",
+    "Room was created succesfully.": "Raum wurde erfolgreich angelegt.",
     "Rooms": "Räume",
     "Rule type": "Art der Regel",
     "Salt High State was applied on all running minions.": "Die Salt-Konfiguration wird an allen aktiven Clients angewendet.",
@@ -270,8 +272,11 @@
     "The white list was changed.": "Die eigene White Liste wurde geändert.",
     "The windows profile of '%s' was froozen.": "Das Windowsprofil von '%s' wurde eingefroren.",
     "The windows profile of '%s' was removed.": "Das Windowsprofil von '%s' wurde gelöscht.",
+    "This device must not be deleted.": "Dieses Gerät darf nicht gelöscht werden",
     "This field is required!": "Dieses Feld muss ausgeüllt werden!",
+    "This group must not be deleted.": "Diese Gruppe darf nicht gelöscht werden",
     "This is a printer device with defined printer queues. You have to delete this devices via printer management.": "Das ist ein Drucker mit zugewiesenen Warteschlangen. Bitte entfernen Sie es in Druckermanagement.",
+    "This user must not be deleted.": "Dieser Benutzer darf nicht gelöscht werden",
     "To login": "Anmelden",
     "Toggle yes no": "umschalten",
     "Update the server.": "Server aktualisieren.",
@@ -285,6 +290,7 @@
     "Write configuration and create installation image": "Konfiugration schreiben und Installationsmedium erstellen",
     "Write proxy configuration and restart proxy.": "Proxykonfiugration schreiben und Proxy neu starten",
     "Write state files for the devices": "Statefiles für die Geräte erstellen",
+    "You must not register more devices in this room.": "Sie können keine weitere Geräte in diesem Raum registrieren.",
     "You must not set access control in a room with no room control.": "In diesem Raum dürfen keine Zugriffsregel gesetzt werden.",
     "acceptingJobs": "Aufträge annehmen",
     "access": "Zugang",
