--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -125,6 +125,7 @@
     "Firewall incoming access rule  was set succesfully.": "Einkomende Firewallregeln wurden erfolgreich gesetzt.",
     "Firewall outgoing access rule  was set succesfully.": "Ausgehende Firewallregeln wurden erfolgreich gesetzt.",
     "Group": "Gruppe",
+    "Group was created.": "Die Gruppe wurde erfolgreich angelegt.",
     "Groups": "Gruppen",
     "HWConf": "Gerätekonfiguration",
     "HWConf was set on '%s'.": "Gerätekonfiguration wurde am '%s' geändert.",
@@ -200,6 +201,7 @@
     "ProductOrder": "Bestellung",
     "Profile": "Profil",
     "Protocol": "Protokol",
+    "Proxy basic configuration was written succesfully.": "Proxykonfiguration wurde erfolgreich geschrieben.",
     "Refresh all objects": "Alle Objekte vom Server holen",
     "Refresh package list.": "Paketliste aktualisieren.",
     "Refresh the import list": "Liste der Importe neu laden",
@@ -269,6 +271,7 @@
     "The incomming rules was changed but not saved.": "Die eingehende Firewallregeln wurden geändert.",
     "The members of group was set.": "Die Mitglieder der Gruppe wurden geändert.",
     "The password of '%s' was reseted.": "Das Passwort für '%s' wurde gesetzt.",
+    "The room was modified succesfully.": "Raum wurde erfolgreich geändert.",
     "The white list was changed.": "Die eigene White Liste wurde geändert.",
     "The windows profile of '%s' was froozen.": "Das Windowsprofil von '%s' wurde eingefroren.",
     "The windows profile of '%s' was removed.": "Das Windowsprofil von '%s' wurde gelöscht.",
@@ -465,6 +468,7 @@
     "rowMultiSelectWithClick": "Mehreren Zeilen per Klick selektieren",
     "rows": "Reihen",
     "runningKernel": "Kernelversion",
+    "rwProfile": "Windowsprofil änderbar machen.",
     "saturday": "Samstag",
     "search": "suchen",
     "secondarySchool": "Mittel/Hauptschule",
