Now we can edit own white list too.

--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -145,6 +145,7 @@
     "List of the results:": "Liste der Rückmeldungen",
     "Logged in users was cleaned up on '%s'.": "Angemeldete Benutzer am '%s' wurden gelöscht.",
     "Manage DHCP Parameter of:": "DHCP Parameter verwalten:",
+    "Manage DNS Filter Configuration": "DNS-Filter Konfiguration",
     "Manage access in the rooms": "Zugriffsstatus in den Räumen verwalten",
     "Manage customer": "Kunden verwalten",
     "Manage devices": "Geräte verwalten",
@@ -184,7 +185,8 @@
     "No default printer": "Kein Standarddrucker",
     "Outgoing rules": "Ausgehende Regeln",
     "Overwiev": "Übersicht",
-    "Own Black List": "Eigene Black List",
+    "Own Black List": "Eigene Black-Liste",
+    "Own White List": "Eigene White-Liste",
     "Package": "Paket",
     "Packages": "Pakete",
     "Picture size": "Bildgröße",
@@ -293,6 +295,7 @@
     "Write configuration and create installation image": "Konfiugration schreiben und Installationsmedium erstellen",
     "Write proxy configuration and restart proxy.": "Proxykonfiugration schreiben und Proxy neu starten",
     "Write state files for the devices": "Statefiles für die Geräte erstellen",
+    "Write the DNS filter configuration and restart the DNS server.": "DNS-Server-Konfiugration schreiben und neu starten",
     "You must not register more devices in this room.": "Sie können keine weitere Geräte in diesem Raum registrieren.",
     "You must not set access control in a room with no room control.": "In diesem Raum dürfen keine Zugriffsregel gesetzt werden.",
     "acceptingJobs": "Aufträge annehmen",
