Enhance and fix translations, Thanks for the help of Frank Schubert. Use NgForm instead of FormGroup by setting the default and available printers.

--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -1,9 +1,11 @@
 {
-    "Group was deleted.":"Gruppe wurde erfolgreich gelöscht.",
+    "%s ( %s %s ) was created with password '%s'": "%s ( %s %s ) wurde mit dem Passwort '%s' angelegt.",
     "%s was created succesfully.": "%s wurde erfolgreich erstellt.",
     "%s was deleted succesfully.": "%s wurde erfolgreich gelöscht.",
+    "'%s' was disabled.": "'%s' wurde  deaktiviert.",
+    "'%s' was enabled.": "'%s' wurde aktiviert.",
     "Acces was deleted succesfully": "Zugriffsregel wurde erfolgreich gelöscht",
-    "Access state in %s was set succesfully.": "Zungangsstatus im Raum %s wurde gäendert.",
+    "Access state in %s was set succesfully.": "Zugangsstatus im Raum %s wurde geändert.",
     "Acls of the selected object": "ACLs des gewählten Objekts",
     "Actual status": "Aktueller Status",
     "AdHoc rooms": "AdHoc Räume",
@@ -129,6 +131,7 @@
     "Firewall outgoing access rule  was set succesfully.": "Ausgehende Firewallregeln wurden erfolgreich gesetzt.",
     "Group": "Gruppe",
     "Group was created.": "Die Gruppe wurde erfolgreich angelegt.",
+    "Group was deleted.": "Gruppe wurde erfolgreich gelöscht.",
     "Groups": "Gruppen",
     "HWConf": "Gerätekonfiguration",
     "HWConf was set on '%s'.": "Gerätekonfiguration wurde am '%s' geändert.",
@@ -222,7 +225,9 @@
     "Room": "Raum",
     "Room access": "Raumzugriff",
     "Room access rules": "Raumzugriffsregeln",
+    "Room description is not unique.": "Raumbeschreibung wird schon verwendet.",
     "Room was created succesfully.": "Raum wurde erfolgreich angelegt.",
+    "Room was removed successfully.": "Raum wurde erfolgreich gelöscht.",
     "Rooms": "Räume",
     "Rule type": "Art der Regel",
     "Salt High State was applied on all running minions.": "Die Salt-Konfiguration wird an allen aktiven Clients angewendet.",
@@ -276,7 +281,10 @@
     "The cephalix list was changed.": "Die eigene Cephalix Liste wurde geändert.",
     "The changes will be lost if you leave the module.": "Ihre Änderungen gehen verloren, wenn Sie das Modul verlassen.",
     "The file system quota for '%s' was set.": "Dateisystemquota für '%s' wurde gesetzt.",
+    "The filesystem quotas was synced succesfully": "Dateisystemquota wurde erfolgreich synchronisiert.",
+    "The groups of the user was set.": "Die gruppenzugehörigkeit des Benutzers wurde gesetzt.",
     "The incomming rules was changed but not saved.": "Die eingehende Firewallregeln wurden geändert.",
+    "The mail system quota for '%s' was set.": "Mailsystemquota wurde für '%s' gesetzt.",
     "The members of group was set.": "Die Mitglieder der Gruppe wurden geändert.",
     "The password of '%s' was reseted.": "Das Passwort für '%s' wurde gesetzt.",
     "The room was modified succesfully.": "Raum wurde erfolgreich geändert.",
@@ -290,19 +298,24 @@
     "This user must not be deleted.": "Dieser Benutzer darf nicht gelöscht werden",
     "To login": "Anmelden",
     "Toggle yes no": "umschalten",
+    "Uid contains not allowed characters.": "Benutzername enthält nicht erlaubte Zeichen.",
     "Update the server.": "Server aktualisieren.",
     "Upload files": "Dateien verteilen",
     "Used": "Benutzt",
     "User": "Benutzer",
+    "User name is not unique.": "Benutzername wird schon verwendet.",
     "User parameters were modified successfully.": "Die Benutzerdaten wurden erfolgreich geändert.",
     "User parameters were set successfully.": "Benutzerparameter wurden erfolgreich geändert.",
+    "User was deleted": "Benutzer wurde gelöscht",
     "User was modified succesfully": "Benutzer wurde erfolgreich geändert",
     "Users": "Benutzer",
     "Write configuration and create installation image": "Konfiugration schreiben und Installationsmedium erstellen",
     "Write proxy configuration and restart proxy.": "Proxykonfiugration schreiben und Proxy neu starten",
     "Write state files for the devices": "Statefiles für die Geräte erstellen",
     "Write the DNS filter configuration and restart the DNS server.": "DNS-Server-Konfiugration schreiben und neu starten",
+    "You have to define the birthday.": "Geburtstag wurde nicht angegeben.",
     "You have to select some institutes to be able to use this site.": "Sie müssen zuerst Server auswählen um diese Seite benutzen zu können.",
+    "You must not modify this user.": "Sie haben keine Berechtigung diesen Benuzter zu ändern.",
     "You must not register more devices in this room.": "Sie können keine weitere Geräte in diesem Raum registrieren.",
     "You must not set access control in a room with no room control.": "In diesem Raum dürfen keine Zugriffsregel gesetzt werden.",
     "acceptingJobs": "Aufträge annehmen",
