Reorganize tiket management.

--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -535,6 +535,7 @@
     "test": "Als Test ausführen",
     "text": "Text",
     "thursday": "Donnerstag",
+    "ticketStatus": "Status",
     "title": "Titel",
     "tuesday": "Dienstag",
     "type": "Art",
