--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -1,12 +1,13 @@
 {
     "%s ( %s %s ) was created with password '%s'": "%s ( %s %s ) wurde mit dem Passwort '%s' angelegt.",
-    "%s was created succesfully.": "%s wurde erfolgreich erstellt.",
-    "%s was deleted succesfully.": "%s wurde erfolgreich gelöscht.",
+    "%s was created successfully.": "%s wurde erfolgreich erstellt.",
+    "%s was deleted successfully.": "%s wurde erfolgreich gelöscht.",
     "'%s' was disabled.": "'%s' wurde  deaktiviert.",
     "'%s' was enabled.": "'%s' wurde aktiviert.",
     "ACLs of the selected object": "ACLs des gewählten Objekts",
-    "Access state in %s was set succesfully.": "Zugangsstatus im Raum %s wurde geändert.",
-    "Access was deleted succesfully": "Zugriffsregel wurde erfolgreich gelöscht",
+    "Access state in %s was set successfully.": "Zugangsstatus im Raum %s wurde geändert.",
+    "Access was deleted successfully": "Zugriffsregel wurde erfolgreich gelöscht",
+    "Access was modified successfully":"Zugriffsregel wurde erfolgreich geändert",
     "Actual status": "Aktueller Status",
     "AdHoc rooms": "AdHoc Räume",
     "Add Device": "Gerät registrieren",
@@ -48,10 +49,11 @@
     "Available groups:": "Weitere Gruppen:",
     "Available members:": "Weitere Benutzer:",
     "Backup": "Sicherung",
+    "Bad computer count. Allowed values are 4,8,16,32,64,128.256,512,1024,2048,4096":"Falsche Anzahl von Computern. Erlaubte Werte sind: 4,8,16,32,64,128.256,512,1024,2048,4096",
     "Base configuration": "Grundkonfiguration",
     "Basic configuration": "Grundkonfiguration",
-    "Boot configuration for %s was removed succesfully.": "Die Bootkonfiguration für %s wurde erfolgreich entfernt.",
-    "Boot configuration was saved succesfully for %s.": "Die Bootkonfiguration für %s wurde erfolgreich erstellt.",
+    "Boot configuration for %s was removed successfully.": "Die Bootkonfiguration für %s wurde erfolgreich entfernt.",
+    "Boot configuration was saved successfully for %s.": "Die Bootkonfiguration für %s wurde erfolgreich erstellt.",
     "Cancel": "Verwerfen",
     "Change grouping of the table": "Gruppierung der Tabelle ändern",
     "Collect files": "Dateien einsammeln",
@@ -73,9 +75,10 @@
     "Create a new software package": "Softwarepaket erstellen",
     "Create a new user": "Einen neuen Benutzer anlegen",
     "Create installation set": "Installationsset erstellen",
-    "Custom list was written succesfull": "Eigene Liste wurde erfolgreich geschrieben",
+    "Custom list was written successfull": "Eigene Liste wurde erfolgreich geschrieben",
     "Customers": "Kunden",
-    "DNS server configuration was written succesfully.": "DNS-Server Konfiguration wurde erfolgreich gespeichert",
+    "DHCP Parameter was added successfully":"DHCP-Parameter wurde erfolgreich zugefügt.",
+    "DNS server configuration was written successfully.": "DNS-Server Konfiguration wurde erfolgreich gespeichert",
     "Default Printer": "Standarddrucker",
     "Define synchronisation of objects for the selected institutes": "Synchronisation für die ausgewählte Server konfigurieren",
     "Delete hwconf": "Gerätekonfiguration löschen",
@@ -88,13 +91,13 @@
     "Device": "Gerät",
     "Device control was applied on '%s'.": "Gerätekontrolle wurde am '%s' angewendet.",
     "Device control was applied on ''%s.": "Geräteaktion wurde an '%s' angewendet.",
-    "Device was modified succesfully.": "Gerät wurde erfolgreich geändert.",
+    "Device was modified successfully.": "Gerät wurde erfolgreich geändert.",
     "Devices": "Geräte",
-    "Devices were created succesfully.": "Geräte wurden erfolgreich angelegt.",
+    "Devices were created successfully.": "Geräte wurden erfolgreich angelegt.",
     "Direct internet access": "Direkter Internetzugang",
     "Do you realy want to delete?": "Wollen Sie die folgenden Objekte wirklich löschen?",
     "Do you realy want to logout?": "Wollen Sie sich wirklich abmelden?",
-    "Download of the softwares was started succesfully": "Das Heruntreladen von Softwarepaketen wurde gestartet.",
+    "Download of the softwares was started successfully": "Das Heruntreladen von Softwarepaketen wurde gestartet.",
     "Download software packages.": "Softwarepakete herunterladen.",
     "Download the installation image": "Installationsmedium herunterladen",
     "Download the password files as pdf files.": "Passwortdateien als PDF's herunterladen.",
@@ -126,8 +129,8 @@
     "File was collected from: %s": "Datei(en) wurde(n) von %s eingesammelt",
     "Files to Upload": "Datei(en) wählen",
     "Filtered internet access": "Gefilterter Internetzugang",
-    "Firewall incoming access rule  was set succesfully.": "Einkommende Firewall-Regeln wurden erfolgreich gesetzt.",
-    "Firewall outgoing access rule  was set succesfully.": "Ausgehende Firewall-Regeln wurden erfolgreich gesetzt.",
+    "Firewall incoming access rule  was set successfully.": "Einkommende Firewall-Regeln wurden erfolgreich gesetzt.",
+    "Firewall outgoing access rule  was set successfully.": "Ausgehende Firewall-Regeln wurden erfolgreich gesetzt.",
     "Group": "Gruppe",
     "Group was created.": "Die Gruppe wurde erfolgreich angelegt.",
     "Group was deleted.": "Gruppe wurde erfolgreich gelöscht.",
@@ -198,9 +201,9 @@
     "Please select at last one object!": "Bitte mindestens ein Objekt markieren!",
     "Positive lists": "Positiv-Listen",
     "Post file into the Import directory of the logged on users or of the workstation users.": "Verteile die Datei(en) in die Importverzeichnisse der angemeldeten Benutzer oder der Workstationsbenutzer.",
-    "Printer was disabled succesfully.": "Der Drucker wurde erfolgreich deaktiviert",
-    "Printer was enabled succesfully.": "Der Drucker wurde erfolgreich aktiviert",
-    "Printer was reseted succesfully.": "Der Drucker wurde erfolgreich zurückgesetzt.",
+    "Printer was disabled successfully.": "Der Drucker wurde erfolgreich deaktiviert",
+    "Printer was enabled successfully.": "Der Drucker wurde erfolgreich aktiviert",
+    "Printer was reseted successfully.": "Der Drucker wurde erfolgreich zurückgesetzt.",
     "Printers": "Drucker",
     "Printers of the device was set.": "Die Drucker wurden für den Rechner gesetzt.",
     "Printers of the room was set.": "Die Drucker wurden für den Raum gesetzt.",
@@ -208,7 +211,7 @@
     "ProductOrder": "Bestellung",
     "Profile": "Profil",
     "Protocol": "Protokoll",
-    "Proxy basic configuration was written succesfully.": "Proxykonfiguration wurde erfolgreich geschrieben.",
+    "Proxy basic configuration was written successfully.": "Proxykonfiguration wurde erfolgreich geschrieben.",
     "Refresh all objects": "Alle Objekte vom Server holen",
     "Refresh package list.": "Paketliste aktualisieren.",
     "Refresh the import list": "Liste der Importe neu laden",
@@ -224,9 +227,10 @@
     "Room access": "Raumzugriff",
     "Room access rules": "Raumzugriffsregeln",
     "Room description is not unique.": "Raumbeschreibung wird schon verwendet.",
-    "Room was created succesfully.": "Der Raum wurde erfolgreich angelegt.",
+    "Room was created successfully.": "Der Raum wurde erfolgreich angelegt.",
     "Room was removed successfully.": "Der Raum wurde erfolgreich gelöscht.",
     "Rooms": "Räume",
+    "Rooms were imported successfully.":"Räume wurden erfolgreich importiert.",
     "Rule type": "Art der Regel",
     "Salt High State was applied on all running minions.": "Die Salt-Konfiguration wird an allen aktiven Clients angewendet.",
     "Security": "Sicherheit",
@@ -279,13 +283,13 @@
     "The cephalix list was changed.": "Die eigene Cephalix-Liste wurde geändert.",
     "The changes will be lost if you leave the module.": "Ihre Änderungen gehen verloren, wenn Sie das Modul verlassen.",
     "The file system quota for '%s' was set.": "Dateisystemquota für '%s' wurde gesetzt.",
-    "The filesystem quotas was synced succesfully": "Dateisystemquota wurde erfolgreich synchronisiert.",
+    "The filesystem quotas was synced successfully": "Dateisystemquota wurde erfolgreich synchronisiert.",
     "The groups of the user was set.": "Die gruppenzugehörigkeit des Benutzers wurde gesetzt.",
     "The incomming rules was changed but not saved.": "Die eingehenden Firewall-Regeln wurden geändert aber noch nicht gespeichert.",
     "The mail system quota for '%s' was set.": "Mailsystemquota wurde für '%s' gesetzt.",
     "The members of group was set.": "Die Mitglieder der Gruppe wurden geändert.",
     "The password of '%s' was reseted.": "Das Passwort für '%s' wurde gesetzt.",
-    "The room was modified succesfully.": "Raum wurde erfolgreich geändert.",
+    "The room was modified successfully.": "Raum wurde erfolgreich geändert.",
     "The white list was changed.": "Die eigene White-Liste wurde geändert.",
     "The windows profile of '%s' was froozen.": "Das Windows-Profil von '%s' wurde eingefroren.",
     "The windows profile of '%s' was removed.": "Das Windows-Profil von '%s' wurde gelöscht.",
@@ -305,7 +309,7 @@
     "User parameters were modified successfully.": "Die Benutzerdaten wurden erfolgreich geändert.",
     "User parameters were set successfully.": "Die Benutzerdaten wurden erfolgreich geändert.",
     "User was deleted": "Der Benutzer wurde gelöscht.",
-    "User was modified succesfully": "Der Benutzer wurde erfolgreich geändert.",
+    "User was modified successfully": "Der Benutzer wurde erfolgreich geändert.",
     "Users": "Benutzer",
     "Write configuration and create installation image": "Konfiguration schreiben und Installationsmedium erstellen",
     "Write proxy configuration and restart proxy.": "Proxykonfiguration schreiben und Proxy neu starten",
