Integration of ngx-quill

--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -1,4 +1,14 @@
 {
+    "abstract":"Zusammenfassung",
+    "announcements":"Veröffentlichungen",
+    "faqs":"FAQs",
+    "contacts":"Kontakte",
+    "List of corresponding announcements":"Aktuelle Veröffentlichungen",
+    "List of owned announcements":"Eigene Veröffentlichungen",
+    "List of corresponding faqs":"FAQs",
+    "List of owned faqs":"Eigene FAQs",
+    "List of corresponding contacts":"Kontakte",
+    "List of owned contacts":"Eigene Kontakte",
     "%s ( %s %s ) was created with password '%s'": "%s ( %s %s ) wurde mit dem Passwort '%s' angelegt.",
     "%s was created successfully.": "%s wurde erfolgreich erstellt.",
     "%s was deleted successfully.": "%s wurde erfolgreich gelöscht.",
