Implementing guest users.

--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -1,14 +1,4 @@
 {
-    "abstract":"Zusammenfassung",
-    "announcements":"Veröffentlichungen",
-    "faqs":"FAQs",
-    "contacts":"Kontakte",
-    "List of corresponding announcements":"Aktuelle Veröffentlichungen",
-    "List of owned announcements":"Eigene Veröffentlichungen",
-    "List of corresponding faqs":"FAQs",
-    "List of owned faqs":"Eigene FAQs",
-    "List of corresponding contacts":"Kontakte",
-    "List of owned contacts":"Eigene Kontakte",
     "%s ( %s %s ) was created with password '%s'": "%s ( %s %s ) wurde mit dem Passwort '%s' angelegt.",
     "%s was created successfully.": "%s wurde erfolgreich erstellt.",
     "%s was deleted successfully.": "%s wurde erfolgreich gelöscht.",
@@ -17,7 +7,7 @@
     "ACLs of the selected object": "ACLs des gewählten Objekts",
     "Access state in %s was set successfully.": "Zugangsstatus im Raum %s wurde geändert.",
     "Access was deleted successfully": "Zugriffsregel wurde erfolgreich gelöscht",
-    "Access was modified successfully":"Zugriffsregel wurde erfolgreich geändert",
+    "Access was modified successfully": "Zugriffsregel wurde erfolgreich geändert",
     "Actual status": "Aktueller Status",
     "AdHoc rooms": "AdHoc Räume",
     "Add Device": "Gerät registrieren",
@@ -59,7 +49,7 @@
     "Available groups:": "Weitere Gruppen:",
     "Available members:": "Weitere Benutzer:",
     "Backup": "Sicherung",
-    "Bad computer count. Allowed values are 4,8,16,32,64,128.256,512,1024,2048,4096":"Falsche Anzahl von Computern. Erlaubte Werte sind: 4,8,16,32,64,128.256,512,1024,2048,4096",
+    "Bad computer count. Allowed values are 4,8,16,32,64,128.256,512,1024,2048,4096": "Falsche Anzahl von Computern. Erlaubte Werte sind: 4,8,16,32,64,128.256,512,1024,2048,4096",
     "Base configuration": "Grundkonfiguration",
     "Basic configuration": "Grundkonfiguration",
     "Boot configuration for %s was removed successfully.": "Die Bootkonfiguration für %s wurde erfolgreich entfernt.",
@@ -72,6 +62,8 @@
     "Confirm": "Bestätigen",
     "Confirm!": "Bestätigen!",
     "Content of the log": "Inhalt der Logdatei",
+    "Count of accounts": "Anzahl der Benutzerkonten",
+    "Create AdHoc-Room": "AdHoc-Raum für die Gruppe anlegen",
     "Create a new customer.": "Einen neuen Kunden anlegen",
     "Create a new device.": "Ein neues Gerät anlegen",
     "Create a new group": "Eine neue Gruppe anlegen",
@@ -87,7 +79,7 @@
     "Create installation set": "Installationsset erstellen",
     "Custom list was written successfull": "Eigene Liste wurde erfolgreich geschrieben",
     "Customers": "Kunden",
-    "DHCP Parameter was added successfully":"DHCP-Parameter wurde erfolgreich zugefügt.",
+    "DHCP Parameter was added successfully": "DHCP-Parameter wurde erfolgreich zugefügt.",
     "DNS server configuration was written successfully.": "DNS-Server Konfiguration wurde erfolgreich gespeichert",
     "Default Printer": "Standarddrucker",
     "Define synchronisation of objects for the selected institutes": "Synchronisation für die ausgewählte Server konfigurieren",
@@ -145,6 +137,7 @@
     "Group was created.": "Die Gruppe wurde erfolgreich angelegt.",
     "Group was deleted.": "Gruppe wurde erfolgreich gelöscht.",
     "Groups": "Gruppen",
+    "Guest Users": "Gastbenutzer",
     "HWConf": "Gerätekonfiguration",
     "HWConf was set on '%s'.": "Gerätekonfiguration wurde am '%s' geändert.",
     "HWConfs": "Gerätekonfigurationen",
@@ -158,7 +151,13 @@
     "Institutes": "Institutionen",
     "Lessons": "Unterricht",
     "List of Imports": "Liste der Importe",
+    "List of corresponding announcements": "Aktuelle Veröffentlichungen",
+    "List of corresponding contacts": "Kontakte",
+    "List of corresponding faqs": "FAQs",
     "List of old Imports": "Alte Importe",
+    "List of owned announcements": "Eigene Veröffentlichungen",
+    "List of owned contacts": "Eigene Kontakte",
+    "List of owned faqs": "Eigene FAQs",
     "List of the results:": "Liste der Rückmeldungen",
     "Logged in users was cleaned up on '%s'.": "Angemeldete Benutzer am '%s' wurden gelöscht.",
     "Manage DHCP Parameter of:": "DHCP Parameter verwalten:",
@@ -218,6 +217,7 @@
     "Printers of the device was set.": "Die Drucker wurden für den Rechner gesetzt.",
     "Printers of the room was set.": "Die Drucker wurden für den Raum gesetzt.",
     "Printing": "Drucken",
+    "Private": "Privat",
     "ProductOrder": "Bestellung",
     "Profile": "Profil",
     "Protocol": "Protokoll",
@@ -234,13 +234,14 @@
     "Restart proxy.": "Proxy neu starten.",
     "Restart the server.": "Server neu starten.",
     "Room": "Raum",
+    "Room Control": "Raumkontrolle",
     "Room access": "Raumzugriff",
     "Room access rules": "Raumzugriffsregeln",
     "Room description is not unique.": "Raumbeschreibung wird schon verwendet.",
     "Room was created successfully.": "Der Raum wurde erfolgreich angelegt.",
     "Room was removed successfully.": "Der Raum wurde erfolgreich gelöscht.",
     "Rooms": "Räume",
-    "Rooms were imported successfully.":"Räume wurden erfolgreich importiert.",
+    "Rooms were imported successfully.": "Räume wurden erfolgreich importiert.",
     "Rule type": "Art der Regel",
     "Salt High State was applied on all running minions.": "Die Salt-Konfiguration wird an allen aktiven Clients angewendet.",
     "Security": "Sicherheit",
@@ -298,6 +299,7 @@
     "The incomming rules was changed but not saved.": "Die eingehenden Firewall-Regeln wurden geändert aber noch nicht gespeichert.",
     "The mail system quota for '%s' was set.": "Mailsystemquota wurde für '%s' gesetzt.",
     "The members of group was set.": "Die Mitglieder der Gruppe wurden geändert.",
+    "The name of the created users have the format groupnameNN": "Der Benutzername der angelegten Konten sieht folgender maßen aus: GruppennameNN",
     "The password of '%s' was reseted.": "Das Passwort für '%s' wurde gesetzt.",
     "The room was modified successfully.": "Raum wurde erfolgreich geändert.",
     "The white list was changed.": "Die eigene White-Liste wurde geändert.",
@@ -321,6 +323,7 @@
     "User was deleted": "Der Benutzer wurde gelöscht.",
     "User was modified successfully": "Der Benutzer wurde erfolgreich geändert.",
     "Users": "Benutzer",
+    "Valid Until": "Gültig bis",
     "Write configuration and create installation image": "Konfiguration schreiben und Installationsmedium erstellen",
     "Write proxy configuration and restart proxy.": "Proxykonfiguration schreiben und Proxy neu starten",
     "Write state files for the devices": "Statefiles für die Geräte erstellen",
@@ -330,6 +333,7 @@
     "You must not modify this user.": "Sie haben keine Berechtigung diesen Benuzter zu ändern.",
     "You must not register more devices in this room.": "Sie können keine weiteren Geräte in diesem Raum registrieren.",
     "You must not set access control in a room with no room control.": "In diesem Raum dürfen keine Zugriffsregel gesetzt werden.",
+    "abstract": "Zusammenfassung",
     "acceptingJobs": "Aufträge annehmen",
     "access": "Zugang",
     "accessType": "Zugangsart",
@@ -343,6 +347,7 @@
     "agGridThema": "Tabellenstil",
     "allClasses": "Importdatei enthält alle Klassen. Andere werden gelöscht.",
     "allTeachers": "durch alle Lehrer",
+    "announcements": "Veröffentlichungen",
     "anonDhcpNetwork": "ANON_DHCP Netzwerk",
     "appendBirthdayToPassword": "Geburtsdatum an das Passwort anhängen.",
     "appendClassToPassword": "Klassennamen an das Passwort anhängen.",
@@ -366,6 +371,7 @@
     "close": "schließen",
     "collect": "Dateien einsammeln",
     "contact": "Kontaktperson",
+    "contacts": "Kontakte",
     "copyTemplate": "Template-Profil anwenden",
     "count": "Anzahl",
     "country": "Land",
@@ -396,6 +402,7 @@
     "errorMessageDuration": "Dauer der Fehlermeldungen in Sekunden",
     "errorMessages": "Fehler",
     "external port": "Externer Port",
+    "faqs": "FAQs",
     "firstRoom": "Erster Raum",
     "firstname": "Vorname",
     "friday": "Freitag",
@@ -408,6 +415,7 @@
     "groupId": "Gruppen",
     "groupType": "Art der Gruppe",
     "groups": "Gruppen",
+    "guest users add": "Gastbenutzer anlegen",
     "gwTrNet": "Standardroute in Transportnetz",
     "gymnasium": "Gymnasium",
     "headerCheckboxSelection": "Checkbox in der Kopfzeile erlauben",
@@ -481,6 +489,7 @@
     "primary": "Primäre Gruppe (Rolle)",
     "primarySchool": "Grundschule",
     "printing": "Drucken",
+    "private": "privat",
     "projectName": "Projektname",
     "prop": "",
     "proxy": "Proxy",
@@ -560,6 +569,7 @@
     "username": "Benutzername",
     "users": "Benutzer",
     "uuid": "Kennung (UUID)",
+    "validUntil": "Gültig bis",
     "validity": "Gültigkeit",
     "value": "Lizenzschlüssel",
     "varUsage": "/var Belegung",
