Use @Input instead of NavPar Implementing rating task responses.

--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -1,4 +1,14 @@
 {
+    "rating":"Beurteilung",
+    "Edit task":"Aufgabe bearbeiten",
+    "Edit announcement":"Nachricht bearbeiten",
+    "Edit faq":"FAQ bearbeiten",
+    "Edit contact":"Kontakt bearbeiten",
+    "Announcements":"Nachrichten",
+    "keywords":"Stichwörter",
+    "validFrom":"Gültig ab",
+    "Tasks":"Aufgaben",
+    "Contacts":"Kontakte",
     "%s ( %s %s ) was created with password '%s'": "%s ( %s %s ) wurde mit dem Passwort '%s' angelegt.",
     "%s was created successfully.": "%s wurde erfolgreich erstellt.",
     "%s was deleted successfully.": "%s wurde erfolgreich gelöscht.",
